--- a/Payment_form.html
+++ b/Payment_form.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payment Form</title>
-</head>
-<body>
+  </head>
+  <body>
     <form action=""></form>
     <h1>Payment Form</h1>
-    <h2>Contact Information</h2> 
-    <p>Name: <input type="text"></p>
+    <h2>Contact Information</h2>
+    <p>Name: <input type="text" name="name" /></p>
+    <fieldset>
+      <legend>Gender</legend>
+        <p>
+          Male <input type="radio" name="gender" id="male" /> Female
+          <input type="radio" name="gender" id="female" />
+        </p> 
+    </fieldset>
+    <fieldset>
+        <Legend>Address</Legend>
+        <p>
+            Street Addr: <textarea name="address" id="address" cols="80" rows="1"></textarea>
+        </p>
+        <p>
+            City: <input type="text" name="city">
+            State: <input type="text" name="state">
+            Zip: <input type="number" name="zip">
+        </p>
+    </fieldset>
+    <p>
+        Email: <input type="email" name="email" id="email">
+    </p>
     
     
-</body>
+  </body>
 </html>
